	- Fixed StoreEntry client offset bug which could trigger a
	  fatal_dump().
	- Fixed noticing that dnsservers have shut down during restart.
	- Added contrib/nextstep installer package from Gerben Wierda.
	- Modified storeDirClean() to remove swap files where the
	  number is being used, but the file is in the wrong directory.
	- Allow PURGE method on all protocols.

Changes to squid-1.1.10 (April 24, 1997):

	- Require 0 <= multicast ttl <= 128.
	- Changed 'unsigned int inaddr_none' to 'struct in_addr no_addr'.
	- Added debug_trap() if unlocking a StoreEntry which still 
	  has registered clients.
	- Added missing storeUnregister() calls.
	- Fixed storeClientListAdd() bug of adding same FD twice.
	- Fixed reconfigure/SIGHUP to wait 'shutdown_lifetime' seconds
	  after receiving signal (Ron Gomes).
	- Added missing commSetSelect() in icpDetectClientClose()
	  (Mark Treacy).
	- Fixed multicast group member counting bug with fake
	  StoreEntry's.
	- Only enable ICP_FLAG_SRC_RTT if the peer is ICP_VERSION_2.
	- Fixed compiling unlinkd in a separate directory (Assar Westerlund).
	- Fixed comm_select_incoming SEGV for poll() version when using
	  udp_{incoming,outgoing}_address  (Mark Treacy).
	- Fixed some SIGHUP related memory problems with redirectors,
	  ipcache, and fqdncache, and peerCountMcastPeers*().
	- Make the unlinkd and pinger programs configurable (Ron Gomes,
	  Neil Murray).
	- Add handshake to unlinkd program (Ron Gomes).
	- Exit if a configured program doesn't exist (Neil Murray).
	- Abort if unlinkd fails to start (Ron Gomes).
	- Added -m option to ftpget for defining default MIME type.
	  (Neil Murray).
	- Optimized comm_select() functions (Mark Treacy).
	- Fixed ipcache_release() to not release locked entries;
	  instead expire them immediately.
	- Fixed up rebuild code to handle swapfile/URL clash
	  cases better.
	- Added safe_inet_addr() to protect from bogus IP addresses
	  (Arjan de Vet).